data/derived/comb/progs/unify/prog5574.ml.out
Characters 29-90:
  buildThresh(buildX(),buildY(),buildSine(buildX()),buildCosine(buildY()));;
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b * 'c * 'd
       but an expression was expected of type expr * expr * expr
